# TinyTracer

./: .gitignore  README.md  TinyTracer.sln  TinyTracer.vcxproj  TinyTracer.vcxproj.filters
Project/: CMakeLists.txt  CMakePresets.json
Project/shaders/: basic.frag  basic.vert
Project/src/: main.cpp
Project/src/graphics/: graphics.cpp  graphics.hpp  vertex.hpp
Project/src/graphics/glfw/: glfw_initialization.cpp  glfw_initialization.hpp  glfw_monitor.cpp  glfw_monitor.hpp  glfw_window.cpp  glfw_window.hpp
Project/src/graphics/opengl/: opengl_graphics.cpp  opengl_graphics.hpp
Project/src/graphics/vulkan/: buffer_handle.hpp  vulkan_graphics.cpp  vulkan_graphics.hpp
Project/src/raytracing/: camera.cpp  camera.hpp  core.cpp  core.hpp  geometry.hpp  intersection_point.hpp  lights.hpp  ray.hpp  raytracer.cpp  raytracer.hpp
Project/src/raytracing/acceleration_structures/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp
Project/src/scene/: camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  lights.hpp  primitives.cpp  primitives.hpp  scene.cpp  scene.hpp
Project/src/shaders/: shader.cpp  shader.hpp
Project/src/utils/: base_types.hpp  color.hpp  constants.hpp  interval.hpp  precomp.hpp  utilities.cpp  utilities.hpp
lib/glad/include/glad/: glad.h
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  common.glsl  shader.fs  shader.vs
src/: base_types.hpp  camera.cpp  camera.hpp  constants.hpp  core.cpp  core.hpp  geometry.hpp  lights.cpp  lights.hpp  main.cpp  raytracer.hpp  shader.hpp
src/graphics/: graphics.cpp  graphics.h  opengl_graphics.cpp  opengl_graphics.h  uniform_transformations.h  uniform_transformations.hpp  vertex.h
src/graphics/glfw/: glfw_initialization.cpp  glfw_monitor.cpp  glfw_monitor.h  glfw_window.cpp  glfw_window.h
src/graphics/opengl/: opengl_graphics.cpp  opengl_graphics.h  opengl_graphics.hpp
src/graphics/vulkan/: buffer_handle.h  texture_handle.hpp  vulkan_graphics.cpp  vulkan_graphics.h  vulkan_graphics.hpp
src/raytracing/: camera.cpp  core.cpp  core.hpp  geometry.cpp  geometry.hpp
src/shaders/: shader.cpp  shader.hpp
src/utils/: base_types.hpp  constants.hpp  precomp.h  precomp.hpp  utilities.cpp  utilities.h
